fix: make changes to make the text more readable

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,6 +9,7 @@ body {
 	font-family: 'Red Hat Display', sans-serif;
 	background-color: $background-color;
 	color: $text-color;
+	letter-spacing: 1px;
 	overflow-x: hidden;
 }
 
@@ -85,6 +86,7 @@ body {
 		background-color: $background-color;
 		font-size: 1.8rem;
 		font-weight: 800;
+		letter-spacing: 2px;
 		transform: translateX(100%);
 		overflow: auto;
 		opacity: 0;
@@ -165,6 +167,7 @@ body {
 		font-size: 3rem;
 		text-align: center;
 		text-transform: uppercase;
+		letter-spacing: 3px;
 	}
 
 	.section {
@@ -173,6 +176,7 @@ body {
 		align-items: center;
 		min-height: 100vh;
 		width: 100vw;
+		letter-spacing: 2px;
 
 		&__title {
 			padding: 1em;
@@ -221,6 +225,7 @@ body {
 			padding: 2em;
 			font-size: 3.2rem;
 			text-align: center;
+			letter-spacing: 2px;
 		}
 
 		&__paragraph {
